# sailfish-device-encryption-community-service

./: CMakeLists.txt  README.md
dbus/: org.sailfishos.open.device.encryption.conf  org.sailfishos.open.device.encryption.service
rpm/: service.spec
src/: main.cpp  service.cpp  service.h
systemd/: sailfish-device-encryption-community-service.service
translations/: en.ts
